# mai-lab-equations

./: CMakeLists.txt  README.md  main.c
common/: common.c  common.h  f1.c  f2.c
dichotomy/: dichotomy.c  dichotomy.h
iterations/: iterations.c  iterations.h
methods/: all_methods.c  dichotomy.c  iterations.c  methods.h  newton.c
solutions/: dichotomy.c  iterations.c  newton.c  solutions.h
